hphp/hack/test/typecheck/tconst/method_return.php.exp
File "method_return.php", line 23, characters 17-22:
Can't use new static() for X; __construct arguments are not guaranteed to be consistent in child classes (Typing[4060])
File "method_return.php", line 3, characters 7-7:
This declaration is neither final nor uses the <<__ConsistentConstruct>> attribute
